<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/etNumbers"
        android:background="@color/bgColor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/btnZero"
        android:gravity="right|center"
        android:layout_weight="1"
        android:textSize="40pt"
        android:textColor="@color/bgColor2"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgColor2">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnAc"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:text="@string/btnAC"
                android:onClick="clickAC"
                android:backgroundTint="@color/btnColor"
                android:textColor="@color/textColor"
                />
            <Button
                android:id="@+id/btnPlusMinus"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:text="@string/btnPlusMinus"
                android:onClick="clickNumber"
                android:backgroundTint="@color/btnColor"
                android:textColor="@color/textColor"
                />
            <Button
                android:id="@+id/btnDivide"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:text="@string/btnDivide"
                android:onClick="btnOperator"
                android:backgroundTint="@color/btnColor"
                android:textColor="@color/textColor"
                />
            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:text="@string/btn_multiply"
                android:onClick="btnOperator"
                android:backgroundTint="@color/btnColor"
                android:textColor="@color/textColor"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:text="@string/btnSeven"
                android:onClick="clickNumber"
                android:backgroundTint="@color/btnColor"
                android:textColor="@color/textColor"
                />
            <Button
                android:id="@+id/btnEight"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:text="@string/btnEight"
                android:onClick="clickNumber"
                android:backgroundTint="@color/btnColor"
                android:textColor="@color/textColor"
                />
            <Button
                android:id="@+id/btnNine"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:text="@string/btnNine"
                android:onClick="clickNumber"
                android:backgroundTint="@color/btnColor"
                android:textColor="@color/textColor"
                />
            <Button
                android:id="@+id/btnPercent"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:onClick="clickPercent"
                android:text="@string/btnPercent"
                android:backgroundTint="@color/btnColor"
                android:textColor="@color/textColor"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnFour"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:text="@string/btnFour"
                android:onClick="clickNumber"
                android:backgroundTint="@color/btnColor"
                android:textColor="@color/textColor"
                />
            <Button
                android:id="@+id/btnFive"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:text="@string/btnFive"
                android:onClick="clickNumber"
                android:backgroundTint="@color/btnColor"
                android:textColor="@color/textColor"
                />
            <Button
                android:id="@+id/btnSix"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:text="@string/btnSix"
                android:onClick="clickNumber"
                android:backgroundTint="@color/btnColor"
                android:textColor="@color/textColor"
                />
            <Button
                android:id="@+id/btnPlus"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:text="@string/btnPlus"
                android:onClick="btnOperator"
                android:backgroundTint="@color/btnColor"
                android:textColor="@color/textColor"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnOne"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:text="@string/btnOne"
                android:onClick="clickNumber"
                android:backgroundTint="@color/btnColor"
                android:textColor="@color/textColor"
                />
            <Button
                android:id="@+id/btnTwo"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:text="@string/btnTwo"
                android:onClick="clickNumber"
                android:backgroundTint="@color/btnColor"
                android:textColor="@color/textColor"
                />
            <Button
                android:id="@+id/btnThree"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:text="@string/btnThree"
                android:onClick="clickNumber"
                android:backgroundTint="@color/btnColor"
                android:textColor="@color/textColor"
                />
            <Button
                android:id="@+id/btnMinus"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:text="@string/btnMinus"
                android:onClick="btnOperator"
                android:backgroundTint="@color/btnColor"
                android:textColor="@color/textColor"
                />
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgColor2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnZero"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="2"
                android:text="@string/btnZero"
                android:onClick="clickNumber"
                android:backgroundTint="@color/btnColor"
                android:textColor="@color/textColor"
                />
            <Button
                android:id="@+id/btnDot"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:text="@string/btnDot"
                android:onClick="clickNumber"
                android:backgroundTint="@color/btnColor"
                android:textColor="@color/textColor"
                />
            <Button
                android:id="@+id/btnEquals"
                android:layout_width="30pt"
                android:layout_height="30pt"
                android:layout_weight="1"
                android:text="@string/btnEquals"
                android:backgroundTint="@color/btnColor"
                android:textColor="@color/textColor"
                android:onClick="clickEquals"
                />
        </TableRow>

    </LinearLayout>

</LinearLayout>